# aca-agent

./: .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  SALES_GUIDE.md  pyproject.toml  requirements.txt
app/: aca_launcher.py  dagster.yaml  entrypoint.py
infra/: README.md
infra/arm/: existing-vnet-template.json  full-stack-template.json  new-vnet-template.json  ui-definition.json
infra/bicep/: full-stack.bicep  main.bicep
samples/: README.md
